fix: text overflow

--- a/src/Stylings/Lyrics.scss
+++ b/src/Stylings/Lyrics.scss
@@ -79,7 +79,7 @@
 	display: flex;
 	flex-direction: column;
 
-	width: 100cqw;
+	width: 85cqw;
 	height: 0;
 
 	container-type: size;
